python-apt (0.7.10.4ubuntu1) karmic; urgency=low

  [ Michael Vogt ]
  * merged from debian/unstable
  
  [ Loic Minier ]
  * Merge changes below from Michael Casadevall; note that these changes were
    concurrently uploaded in a different form in 0.7.10.3ubuntu2 which wasn't
    committed in bzr.

  [ Michael Casadevall ]
  * setup.py:
    - Added gcc and gcc_s to work around gcc-4.4 issue on ARM and libstdc++
    - This is a temporary workaround for Karmic Alpha 1. See bug #375334 
      for more details

  [ Loic Minier ]
  * Update mirror list from LP.
  * Unset https_proxy in pre-build.sh to workaround LP #94130.

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 15 Jun 2009 11:02:25 +0200

python-apt (0.7.10.4) unstable; urgency=low

  [ Michael Vogt ]
  * data/templates/Ubuntu.info.in:
    - updated for the new ubuntu karmic version
  * data/templates/Debian.info.in:
    - add squeeze

  [ Otavio Salvador ]
  * utils/get_debian_mirrors.py: updated to support current mirror page.
  * Update Debian mirrors. (Closes: #518071)

 -- Michael Vogt <mvo@debian.org>  Tue, 05 May 2009 12:03:27 +0200

python-apt (0.7.10.3ubuntu1) karmic; urgency=low

  * merged from debian, remaining changes:
    - updated mirrors
    - build python2.4
    - use DH_PYCENTRAL=include-links
    - use --install-layout=deb
    - pre-build.sh: update ubuntu mirrors on bzr-buildpackage
  
 -- Michael Vogt <mvo@debian.org>  Tue, 05 May 2009 12:03:27 +0200

python-apt (0.7.10.3) unstable; urgency=low

  * apt/package.py: Handle cases where no candidate is available, by returning
    None in the candidate property. (Closes: #523801)

 -- Julian Andres Klode <jak@debian.org>  Sun, 12 Apr 2009 19:50:26 +0200

python-apt (0.7.10.2) unstable; urgency=low

  * apt/package.py: Handle cases where no candidate is available and
    one of the deprecated properties (e.g. candidateVersion) is
    requested. (Closes: #523801)
  * setup.py, debian/rules: Support version in setup.py again by getting